# sqlfi

./: Cargo.toml  LICENCE  README.md  README.org  shell.nix
src/: app.rs  config.rs  main.rs
src/db/: mod.rs
src/db/sgdb/: mod.rs  mysql.rs
src/meta/: mod.rs
src/ui/: mod.rs
src/ui/components/: icons.rs  meta_grid.rs  meta_table.rs  mod.rs  sql_editor.rs
src/ui/meta/: mod.rs
src/ui/views/: db_view.rs  hello_view.rs  meta_queries_view.rs  mod.rs
